--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,10 @@
 
 # Site settings
-title: CS231n Convolutional Neural Networks for Visual Recognition
-email: karpathy@cs.stanford.edu
-description: "Course materials and notes for Stanford class CS231n: Convolutional Neural Networks for Visual Recognition."
+title: AI
+email: mahaugen@stanford.edu
+description: ""
 baseurl: ""
-url: "http://cs231n.github.io"
-twitter_username: cs231n
-github_username:  cs231n
+url: "http://matzhaugen.github.io/ai"
 
 # Build settings
 markdown: redcarpet
