--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 title: AI
 email: mahaugen@stanford.edu
 description: ""
-baseurl: ""
+baseurl: "ai"
 url: "http://matzhaugen.github.io/ai"
 
 # Build settings
