--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 
 # Site settings
-title: AI
+title: Artificial Intelligence for Stanford Pre-Collegiate Studies 
 email: mahaugen@stanford.edu
 description: ""
 baseurl: "ai"
